--- a/templates/articles/create_comment.html
+++ b/templates/articles/create_comment.html
@@ -11,6 +11,6 @@
             {% include 'incl/forum_message_form.html' %}
         </div>
     {% endcapture %}
-    {% include 'incl/tile/base_blue.html' with title='Ответить' content=create_form_tmpl %}
+    {% include 'incl/tile/base.html' with title='Ответить' content=create_form_tmpl color_class='bl_inside' %}
 
 {% endblock %}
