--- a/templates/articles/detail.html
+++ b/templates/articles/detail.html
@@ -133,7 +133,7 @@
             </div>
         </div>
     {% endcapture %}
-    {% include 'incl/tile/base_orange.html' with content=article_detail_tmpl hide_tile_title=True %}
+    {% include 'incl/tile/base.html' with content=article_detail_tmpl hide_tile_title=True %}
 
     <div style="margin-top: 5px;" class="normal align-center">
         {% include 'incl/adv/ya_direct.html' %}
