--- a/templates/articles/incl/tile/article_extend.html
+++ b/templates/articles/incl/tile/article_extend.html
@@ -1,6 +1,8 @@
-{% extends 'incl/tile/base_blue.html' %}
+{% extends 'incl/tile/base.html' %}
 
 {% block height_class %}{% endblock %}
+
+{% block color_class %}bl_inside{% endblock %}
 
 {% block title %}
     {% if material %}
