--- a/templates/articles/list.html
+++ b/templates/articles/list.html
@@ -65,6 +65,6 @@
             </div>
         </div>
     {% endcapture %}
-    {% include 'incl/tile/base_orange.html' with title=partition.name content=article_list_tmpl %}
+    {% include 'incl/tile/base.html' with title=partition.name content=article_list_tmpl %}
 
 {% endblock %}
