--- a/templates/articles/notice_list.html
+++ b/templates/articles/notice_list.html
@@ -75,6 +75,6 @@
             </form>
         {% endif %}
     {% endcapture %}
-    {% include 'incl/tile/base_orange.html' with title='Анонсы' content=notice_list_tmpl %}
+    {% include 'incl/tile/base.html' with title='Анонсы' content=notice_list_tmpl %}
 
 {% endblock %}
