--- a/templates/bloggers/blogger_list.html
+++ b/templates/bloggers/blogger_list.html
@@ -11,6 +11,6 @@
     {% capture as entry_list_tmpl silent %}
         {% include 'bloggers/incl/entry.html' %}
     {% endcapture %}
-    {% include 'incl/tile/base_orange.html' with title=blogger_obj.cover_name content=entry_list_tmpl %}
+    {% include 'incl/tile/base.html' with title=blogger_obj.cover_name content=entry_list_tmpl %}
 
 {% endblock %}
