--- a/templates/forum/index.html
+++ b/templates/forum/index.html
@@ -64,6 +64,6 @@
             </tr>
         </table>
     {% endcapture %}
-    {% include 'incl/tile/base_blue.html' with title=forum_title_tmpl content=forum_article_list_tmpl %}
+    {% include 'incl/tile/base.html' with title=forum_title_tmpl content=forum_article_list_tmpl color_class='bl_inside' %}
 
 {% endblock %}
