--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -123,6 +123,6 @@
             </div>
         </div>
     {% endcapture %}
-    {% include 'incl/tile/base_orange.html' with title='О нас' content=about_tmpl %}
+    {% include 'incl/tile/base.html' with title='О нас' content=about_tmpl %}
 
 {% endblock %}
