--- a/templates/polls/detail.html
+++ b/templates/polls/detail.html
@@ -46,6 +46,6 @@
             <br />
         </div>
     {% endcapture %}
-    {% include 'incl/tile/base_orange.html' with title='Результаты голосования' content=poll_results_tmpl %}
+    {% include 'incl/tile/base.html' with title='Результаты голосования' content=poll_results_tmpl %}
 
 {% endblock %}
