--- a/templates/pages/advert.html
+++ b/templates/pages/advert.html
@@ -208,6 +208,6 @@
             </div>
         </div>
     {% endcapture %}
-    {% include 'incl/tile/base_orange.html' with title='Реклама на сайте' content=advert_tmpl %}
+    {% include 'incl/tile/base.html' with title='Реклама на сайте' content=advert_tmpl %}
 
 {% endblock %}
