--- a/templates/articles/video.html
+++ b/templates/articles/video.html
@@ -30,14 +30,14 @@
 
     <table class="full-table">
         <tr>
-            <td class="valign-top wp60 bl_inside">
-                {% include 'incl/tile/video.html' with material=materials.video_politic %}
+            <td class="valign-top wp60 hp100">
+                {% include 'incl/tile/video.html' with material=materials.video_politic color_class='bl_inside' %}
             </td>
             <td class="w7">
                 <div style="width:7px; height:1px"><!-- --></div>
             </td>
-            <td class="valign-top wp40 or_inside">
-                {% include 'incl/tile/video.html' with material=materials.video_partner_lugansk24 %}
+            <td class="valign-top wp40 hp100">
+                {% include 'incl/tile/video.html' with material=materials.video_partner_lugansk24 color_class='or_inside' %}
             </td>
         </tr>
     </table>
@@ -45,14 +45,14 @@
 
     <table class="full-table">
         <tr>
-            <td class="valign-top wp60 bl_inside">
-                {% include 'incl/tile/video.html' with material=materials.video_economic %}
+            <td class="valign-top wp60 hp100">
+                {% include 'incl/tile/video.html' with material=materials.video_economic color_class='bl_inside' %}
             </td>
             <td class="w7">
                 <div style="width:7px; height:1px"><!-- --></div>
             </td>
-            <td class="valign-top wp40 or_inside">
-                {% include 'incl/tile/video.html' with material=materials.video_partner_dorenko %}
+            <td class="valign-top wp40 hp100">
+                {% include 'incl/tile/video.html' with material=materials.video_partner_dorenko color_class='or_inside' %}
             </td>
         </tr>
     </table>
@@ -60,14 +60,14 @@
 
     <table class="full-table">
         <tr>
-            <td class="valign-top wp60 bl_inside">
-                {% include 'incl/tile/video.html' with material=materials.video_accidents %}
+            <td class="valign-top wp60 hp100">
+                {% include 'incl/tile/video.html' with material=materials.video_accidents color_class='bl_inside' %}
             </td>
             <td class="w7">
                 <div style="width:7px; height:1px"><!-- --></div>
             </td>
-            <td class="valign-top wp40 or_inside">
-                {% include 'incl/tile/video.html' with material=materials.video_partner_krasnoetv %}
+            <td class="valign-top wp40 hp100">
+                {% include 'incl/tile/video.html' with material=materials.video_partner_krasnoetv color_class='or_inside' %}
             </td>
         </tr>
     </table>
@@ -75,8 +75,8 @@
 
     <table class="full-table">
         <tr>
-            <td class="valign-top wp100 bl_inside">
-                {% include 'incl/tile/video.html' with material=materials.video_fpolitic %}
+            <td class="valign-top wp100">
+                {% include 'incl/tile/video.html' with material=materials.video_fpolitic color_class='bl_inside' %}
             </td>
         </tr>
     </table>
@@ -84,14 +84,14 @@
 
     <table class="full-table">
         <tr>
-            <td class="valign-top wp60 bl_inside">
-                {% include 'incl/tile/video.html' with material=materials.video_society %}
+            <td class="valign-top wp60 hp100">
+                {% include 'incl/tile/video.html' with material=materials.video_society color_class='bl_inside' %}
             </td>
             <td class="w7">
                 <div style="width:7px; height:1px"><!-- --></div>
             </td>
-            <td class="valign-top wp40 or_inside">
-                {% include 'incl/tile/video.html' with material=materials.video_partner_nevextv %}
+            <td class="valign-top wp40 hp100">
+                {% include 'incl/tile/video.html' with material=materials.video_partner_nevextv color_class='or_inside' %}
             </td>
         </tr>
     </table>
@@ -99,8 +99,8 @@
 
     <table class="full-table">
         <tr>
-            <td class="valign-top wp100 bl_inside">
-                {% include 'incl/tile/video.html' with material=materials.video_national %}
+            <td class="valign-top wp100">
+                {% include 'incl/tile/video.html' with material=materials.video_national color_class='bl_inside' %}
             </td>
         </tr>
     </table>
