--- a/templates/articles/detail.html
+++ b/templates/articles/detail.html
@@ -155,10 +155,9 @@
 
         <div style="width:1px; height:5px"><!-- --></div>
         {% with articles=in_sections %}
-            <div class="big1 bl">В разделах:</div>
-            <div style="width:1px; height:1px"><!-- --></div>
-            <div class="border_bl">
-                <table cellpadding=0 cellspacing=0 width="100%" class="border_t_bl">
+
+            {% capture as in_section_tmpl silent %}
+                <table cellpadding=0 cellspacing=0 width="100%">
                     {% for article in articles %}
                         <tr>
                             <td>
@@ -172,7 +171,9 @@
                         </tr>
                     {% endfor %}
                 </table>
-            </div>
+            {% endcapture %}
+            {% include 'incl/tile/base.html' with title='В разделах:' content=in_section_tmpl color_class='bl_inside' %}
+
         {% endwith %}
 
     {% endif %}
