correct create_section task; add more flags to article; init_data: add sections, tags, authors, articles, opposition partitions

--- a/templates/articles/incl/link.html
+++ b/templates/articles/incl/link.html
@@ -2,10 +2,10 @@
 
 {% if strong %}
     <strong>
-        <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
+        <a href="{{ article.get_absolute_url }}">{{ article.title|safe }}</a>
     </strong>
 {% else %}
-    <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
+    <a href="{{ article.get_absolute_url }}">{{ article.title|safe }}</a>
 {% endif %}
 
 {% if article.show_comments %}
