--- a/templates/articles/notice_list.html
+++ b/templates/articles/notice_list.html
@@ -14,7 +14,7 @@
                         <a id="{{ notice.id }}"></a>
                         <div class="p_hv">
                             <div class="normal">
-                                {{ notice.content }}
+                                {{ notice.content|safe }}
                             </div>
                         </div>
                         <div style="height:1px; background: #FFD4B7;"><!-- --></div>
