--- a/templates/articles/video.html
+++ b/templates/articles/video.html
@@ -7,11 +7,11 @@
             <table class="full-table">
                 <tr>
                     <td class="valign-top wp50 hp100">
-                        {% include 'articles/incl/tile/article_short.html' with title='Репортаж дня' article=main_news %}
+                        {% include 'articles/incl/tile/article_short.html' with title='Репортаж дня' article=main_material %}
                     </td>
                     <td class="w7"><div style="width:7px; height:1px"><!-- --></div></td>
                     <td class="valign-top wp50 hp100">
-                        {% include 'articles/incl/tile/article_short.html' with title='Главный сюжет' article=main_material %}
+                        {% include 'articles/incl/tile/article_short.html' with title='Главный сюжет' article=main_news %}
                     </td>
                 </tr>
             </table>
