save opposition resources logos

--- a/templates/articles/detail.html
+++ b/templates/articles/detail.html
@@ -69,7 +69,7 @@
                     <tr>
                         <td>
                             <img itemprop="thumbnailUrl" class="pwi" src="{{ object.icon|crop:'100x100' }}"
-                                 alt="{{ object.title }}">
+                                 alt="{{ object.title }}" width="100">
                         </td>
                     </tr>
                 </table>
