author detail: add image width

--- a/templates/authors/detail.html
+++ b/templates/authors/detail.html
@@ -14,7 +14,8 @@
                 <td>
                     <div class="or2_normal">&nbsp;&nbsp;<b>Об авторе:</b></div>
                     <div class="normal">
-                        <img class="pwi" src="{{ object.icon|crop:'100x100' }}" alt="{{ object.cover_name|safe }}">
+                        <img class="pwi" src="{{ object.icon|crop:'100x100' }}" alt="{{ object.cover_name|safe }}"
+                             width="100">
                         {{ object.description|safe }}
                     </div>
                 </td>
